--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     println("Executing Dependencies")
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.4.0'
+    //compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.1'
+    compile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
 }
 
 application {
